force-app/main/default/objects/Contact/fields/Candidate_Source__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Source__c</fullName>
    <label>Candidate Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>LinkedIn</fullName><default>false</default><label>LinkedIn</label></value>
            <value><fullName>Indeed</fullName><default>false</default><label>Indeed</label></value>
            <value><fullName>Career Page</fullName><default>false</default><label>Career Page</label></value>
            <value><fullName>Referral</fullName><default>false</default><label>Referral</label></value>
            <value><fullName>Agency</fullName><default>false</default><label>Agency</label></value>
            <value><fullName>Direct</fullName><default>false</default><label>Direct</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>