force-app/main/default/objects/Contact/fields/CV_Parsed__c.field-meta.xml
<CustomField>
    <fullName>CV_Parsed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CV Parsed</label>
    <type>Checkbox</type>
</CustomField>