force-app/main/default/objects/Contact/fields/CV_Parsed_Date__c.field-meta.xml
<CustomField>
    <fullName>CV_Parsed_Date__c</fullName>
    <label>CV Parsed Date</label>
    <type>DateTime</type>
</CustomField>