force-app/main/default/objects/Contact/fields/Education_Summary__c.field-meta.xml
<CustomField>
    <fullName>Education_Summary__c</fullName>
    <label>Education Summary</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>