force-app/main/default/objects/Contact/fields/Languages__c.field-meta.xml
<CustomField>
    <fullName>Languages__c</fullName>
    <label>Languages</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>