force-app/main/default/objects/Contact/fields/Professional_Summary__c.field-meta.xml
<CustomField>
    <fullName>Professional_Summary__c</fullName>
    <label>Professional Summary</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>