force-app/main/default/objects/Contact/fields/Salary_Expectation__c.field-meta.xml
<CustomField>
    <fullName>Salary_Expectation__c</fullName>
    <label>Salary Expectation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>